exports[`Button has correct default options 1`] = `
<button
  aria-label={undefined}
  className="grommetux-button grommetux-button--disabled"
  disabled={true}
  href={undefined}
  id={undefined}
  onClick={undefined}
  type="button">
  Test me
</button>
`;

exports[`Button has correct icon as children rendering 1`] = `
<button
  aria-label={undefined}
  className="grommetux-button grommetux-button--disabled grommetux-button--icon"
  disabled={true}
  href={undefined}
  id={undefined}
  onClick={undefined}
  type="button">
  <span
    className="grommetux-button__icon">
    <svg
      height="24px"
      role="img"
      version="1.1"
      viewBox="0 0 24 24.3616"
      width="24px" />
  </span>
</button>
`;

exports[`Button has correct icon rendering 1`] = `
<button
  aria-label={undefined}
  className="grommetux-button grommetux-button--disabled grommetux-button--plain grommetux-button--icon"
  disabled={true}
  href={undefined}
  id={undefined}
  onClick={undefined}
  type="button">
  <span
    className="grommetux-button__icon">
    <svg
      height="24px"
      role="img"
      version="1.1"
      viewBox="0 0 24 24.3616"
      width="24px" />
  </span>
</button>
`;

exports[`Button has correct plain={true} rendering 1`] = `
<button
  aria-label={undefined}
  className="grommetux-button grommetux-button--disabled grommetux-button--plain"
  disabled={true}
  href={undefined}
  id={undefined}
  onClick={undefined}
  type="button">
  Test me
</button>
`;

exports[`Button has correct primary={true} rendering 1`] = `
<button
  aria-label={undefined}
  className="grommetux-button grommetux-button--primary grommetux-button--disabled"
  disabled={true}
  href={undefined}
  id={undefined}
  onClick={undefined}
  type="button">
  Test me
</button>
`;

exports[`Button has text as children rendering 1`] = `
<button
  aria-label={undefined}
  className="grommetux-button grommetux-button--disabled"
  disabled={true}
  href={undefined}
  id={undefined}
  onClick={undefined}
  type="button">
  test
</button>
`;
